--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio of Kafi</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span id="name">Al Kafi</span>'s World!</h1>
+            <h5>Dream Big and Achieve Goal</h5>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo aperiam minus quis modi. Inventore,
+                repellendus!
+                Sunt dolor ratione ipsa, porro optio voluptas fuga aperiam error est? Perferendis magni, culpa dolorem
+                ab
+                delectus ipsa consectetur vitae quos minus perspiciatis obcaecati hic? Omnis aliquam deserunt beatae rem
+                perferendis, harum ducimus sed unde debitis ipsam necessitatibus voluptatum sint ad nostrum vero, ea
+                iste.
+                Accusantium porro quidem nostrum voluptatem perspiciatis labore illo debitis eum dignissimos dolorem?
+                Labore
+                nemo deserunt similique? Unde, aperiam quas suscipit deserunt totam impedit saepe fuga aliquam porro,
+                modi
+                blanditiis ipsam nisi voluptas repellat, facere ullam! Recusandae nulla odit error earum?
+              
+            </p>
+            <a class="link-button"    target="blank" href="http://google.com">Connect to me</a>
+        </div >
+        <div class="half-width">
+            <img src="images/my-bg2 (1).png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
