--- a/index.html
+++ b/index.html
@@ -31,12 +31,34 @@
                 nemo deserunt similique? Unde, aperiam quas suscipit deserunt totam impedit saepe fuga aliquam porro,
                 modi
                 blanditiis ipsam nisi voluptas repellat, facere ullam! Recusandae nulla odit error earum?
-              
+
             </p>
-            <a class="link-button"    target="blank" href="http://google.com">Connect to me</a>
-        </div >
+            <a class="link-button" target="blank" href="http://google.com">Connect to me</a>
+        </div>
         <div class="half-width">
             <img src="images/my-bg2 (1).png" alt="">
+        </div>
+    </section>
+    <section class="second-sec">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, nemo!</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio nihil odio perferendis nesciunt,
+                delectus,
+                unde facere, voluptas ad corporis cumque veniam libero sint aspernatur consectetur nemo deserunt quo
+                voluptatibus assumenda officiis recusandae amet sit reprehenderit quis ullam. Adipisci dolorem itaque
+                molestias enim, necessitatibus iure culpa repudiandae corrupti quas voluptates quisquam beatae saepe
+                maiores
+                consequuntur minus neque! Inventore, saepe eligendi. Culpa ipsam ratione quaerat eveniet sequi delectus
+                ullam dignissimos, officiis error dolorum expedita, accusantium repellendus quos! Vero nemo cum id
+                recusandae eius doloremque, excepturi similique eos harum debitis repudiandae aperiam dolor adipisci
+                animi,
+                perspiciatis, dolorem nisi repellat aliquid odit consequatur earum?
+            </p>
+            <a class="link-button" href="">Download CV</a>
         </div>
     </section>
 </body>
