--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flex-cont">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span id="name">Al Kafi</span>'s World!</h1>
@@ -39,7 +39,7 @@
             <img src="images/my-bg2 (1).png" alt="">
         </div>
     </section>
-    <section class="second-sec">
+    <section class="second-sec flex-cont">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -60,6 +60,28 @@
             </p>
             <a class="link-button" href="">Download CV</a>
         </div>
+    </section>
+    <section class="Experience-sec">
+        <h1>Experiences</h1>
+        <div class="flex-cont">
+            <div class="half-width">
+                <h1>Junior chef</h1>
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem ea quisquam beatae amet, earum deserunt
+                    reiciendis repellendus consectetur sequi, doloribus ratione? Nam, blanditiis recusandae eveniet quia
+                    officia nobis minima at.</p>
+    
+            </div>
+            <div class="half-width">
+                <h1>Junior Web Developer</h1>
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem ea quisquam beatae amet, earum deserunt
+                    reiciendis repellendus consectetur sequi, doloribus ratione? Nam, blanditiis recusandae eveniet quia
+                    officia nobis minima at.</p>
+    
+            </div>
+        </div>
+
     </section>
 </body>
 
