experience and footer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <section class="top-banner flex-cont">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span id="name">Al Kafi</span>'s World!</h1>
-            <h5>Dream Big and Achieve Goal</h5>
+            <h1><span class="name">Al Kafi</span>'s World!</h1>
+            <h3>Dream Big and Achieve Goal</h3>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo aperiam minus quis modi. Inventore,
                 repellendus!
@@ -61,20 +61,20 @@
             <a class="link-button" href="">Download CV</a>
         </div>
     </section>
-    <section class="Experience-sec">
+    <section class="experience-sec">
         <h1>Experiences</h1>
         <div class="flex-cont">
-            <div class="half-width">
-                <h1>Junior chef</h1>
-                <h3>Lorem ipsum dolor sit.</h3>
+            <div id="first-exp" class="experience-item">
+                <h2>Junior chef</h2>
+                <h4 class="name">Lorem ipsum dolor sit.</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem ea quisquam beatae amet, earum deserunt
                     reiciendis repellendus consectetur sequi, doloribus ratione? Nam, blanditiis recusandae eveniet quia
                     officia nobis minima at.</p>
     
             </div>
-            <div class="half-width">
-                <h1>Junior Web Developer</h1>
-                <h3>Lorem ipsum dolor sit.</h3>
+            <div id="second-exp" class="experience-item">
+                <h2>Junior Web Developer</h2>
+                <h4 class="name">Lorem ipsum dolor sit.</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem ea quisquam beatae amet, earum deserunt
                     reiciendis repellendus consectetur sequi, doloribus ratione? Nam, blanditiis recusandae eveniet quia
                     officia nobis minima at.</p>
@@ -83,6 +83,9 @@
         </div>
 
     </section>
+    <footer>
+        <p>This is a demo Website@copyright</p>
+    </footer>
 </body>
 
 </html>
